Updates on Workout.java
Tested the addToWorkouts() method and added the ScrollPane for the previous workouts.